# tcli

./: Cargo.toml  LICENSE  README.md  tcli.sh
.github/workflows/: rust.yml
src/: args.rs  cipher.rs  components.rs  errors.rs  init_files.rs  main.rs  user.rs  utils.rs
src/api/: create_user.rs  upload.rs
src/commands/: component_get.rs  create_user.rs  init.rs  mod.rs  run.rs  upload.rs
src/component_utils/: component.rs  get_tre.rs  mod.rs
src/config_utils/: component_config.rs  mod.rs
src/files/: mod.rs
test/: test.hooks
