[package]
name = "tcli"
version = "0.1.1-beta"
edition = "2021"
description = "An utility app to help creating cogs for TCore"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
colored = "2.0.0"
requestty = "0.5.0"
