[package]
name = "tcli"
version = "0.2.2"
edition = "2021"
description = "An utility app to help creating cogs for TCore"
authors = ["Kunal Dandekar"]
homepage = "https://github.com/Tectone23/tcli"
repository = "https://github.com/Tectone23/tcli"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
serde = {version = "1.0.152", features = ["derive"]}
colored = "2.0.0"
dirs = "4.0.0"
serde_yaml = "0.9.17"
aes = "0.8.2"
aes-gcm = "0.10.1"
base64 = "0.21.0"
pbkdf2 = "0.12.1"
sha2 = "0.10.6"
reqwest = { version = "0.11.15", features = ["blocking", "json", "multipart"] }
serde_json = "1.0.94"
argon2 = "0.5.0"
rpassword = "7.2.0"
regex = "1.7.3"
requestty = "0.5.0"
